--- a/styles/header.css
+++ b/styles/header.css
@@ -1,18 +1,4 @@
 .header {
-    height: 55px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    /*align-items: center; /* Ensures vertical alignment */
-    /*padding: 0 20px; /* Adds some padding for spacing */
-    /*box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1); /* Optional for a subtle shadow effect */
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 2028;
-    background-color: white;
-    border-bottom-width: 2px;
-    border-bottom-style: solid;
-    border-bottom-color:rgb(228, 228, 228);
+    height: 200px;
+    cursor: pointer;
 }
