--- a/styles/header.css
+++ b/styles/header.css
@@ -11,10 +11,26 @@
     align-items: center;
     background-color: #f6f7f6; 
     padding: 10px 20px;
+    border-bottom: 3px solid black;
+    border-radius: 0px;
+}
+
+.company-name {
+    font-size: 20px;
+    font-weight: bold;
+    color: black;
+    font-family: Helvetica, Arial, sans-serif;
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
 
 .logo img {
-    height: 50px; 
+    height: 60px;
+    width: auto; 
 }
 
 nav ul {
