--- a/styles/header.css
+++ b/styles/header.css
@@ -60,5 +60,27 @@ nav ul li a:hover {
 .slider {
     width: 1300px;
     max-width: 100vw;
-    
+    height: 700px;
+    margin: auto;
+    position: relative;
+}
+
+.list {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    display: flex;
+    width: max-content;
+}
+
+.list img {
+    width: 1300px;
+    max-width: 100vw;
+    height: 100%;
+    object-fit: cover;
+}
+
+.buttons {
+    position: absolute;
 }
