--- a/styles/style.css
+++ b/styles/style.css
@@ -63,7 +63,7 @@ nav ul li a:hover {
     height: 700px;
     margin: auto;
     position: relative;
-    transition: 0.5s ease-in-out;
+    overflow: hidden;
 }
 
 .list {
@@ -72,7 +72,7 @@ nav ul li a:hover {
     left: 0;
     height: 100%;
     display: flex;
-    width: calc(1300px * 3);
+    width: 3900px;
     transition: 0.5s ease-in-out;
 }
 
