--- a/styles/style.css
+++ b/styles/style.css
@@ -66,14 +66,14 @@ nav ul li a:hover {
     overflow: hidden;
 }
 
-.list {
+.slider .list {
     position: absolute;
     top: 0;
     left: 0;
     height: 100%;
     display: flex;
-    width: 3900px;
-    transition: 0.5s ease-in-out;
+    width: max-content;
+    transition: 1s;
 }
 
 .list img {
