--- a/styles/style.css
+++ b/styles/style.css
@@ -76,14 +76,14 @@ nav ul li a:hover {
     transition: 1s;
 }
 
-.list img {
+.slider .list img {
     width: 1300px;
     max-width: 100vw;
     height: 100%;
     object-fit: cover;
 }
 
-.buttons {
+.slider .buttons {
     position: absolute;
     top: 45%;
     left: 5%;
@@ -92,7 +92,7 @@ nav ul li a:hover {
     justify-content: space-between;
 }
 
-.buttons button {
+.slider .buttons button {
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -103,12 +103,12 @@ nav ul li a:hover {
     font-weight: bold;
 }
 
-.dots {
+.slider .dots {
     position: absolute;
     bottom: 10px;
     color: #fff;
     left: 0;
-    width: 100;
+    width: 100%;
     margin: 0;
     padding: 0;
     display: flex;
