--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,27 @@
     font-family: Arial, sans-serif, monospace;
 }
 
+.gradient-background {
+    background: linear-gradient(300deg, #00bfff, #ff4c68, #ef8172);
+    background-size: 180% 180%;
+    animation: gradient-animation 18s ease infinite;
+    padding-top: 2rem;     
+    padding-bottom: 2rem;  
+    min-height: 100vh;
+}
+
+@keyframes gradient-animation {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
 .navbar {
     display: flex;
     justify-content: space-between;
