--- a/styles/style.css
+++ b/styles/style.css
@@ -44,8 +44,9 @@
 }
 
 .text-stroke {
-  -webkit-text-stroke: 1px rgb(255, 255, 255); /* Outline color */
+  -webkit-text-stroke: 1.5px rgb(255, 255, 255); /* Outline color */
   color: rgb(10, 10, 131);           /* Hide fill color */
+  font-family: cursive;
 }
 
 .logo {
